--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="flex flex-col mt-4">
         <label for="search" class="font-semibold">Rechercher un cours</label>
         <input placeholder="Espagnol" type="search" id="search" name="search"
-               class="bg-gray-800 border-gray-700 focus:ring-purple-500 focus:border-purple-500  border transition duration-200 ease-in-out py-2 px-4 mt-2 block w-full border-gray-300 rounded-lg">
+               class="bg-gray-800 border-gray-700 focus:ring-purple-500 shadow-lg focus:border-purple-500  border transition duration-200 ease-in-out py-2 px-4 mt-2 block w-full border-gray-300 rounded-lg">
     </div>
 
     <div class="loading bg-gray-800 w-full p-4 rounded-lg border border-gray-700 flex items-center justify-center mt-4">
@@ -32,7 +32,7 @@
 
 </div>
 <a href="//github.com/felixdorn/cned.felixdorn.fr" class="block mt-8">
-    <footer class="bg-gray-800 border-t border-gray-700 flex items-center justify-center py-4">
+    <footer class="bg-gray-800 border-t border-gray-700 flex items-center justify-center py-4 max-w-2xl mx-auto rounded-lg">
         <svg xmlns="http://www.w3.org/2000/svg" class="" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
              stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
