--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body class="bg-gray-900 text-gray-200">
-<div class="max-w-2xl mx-auto mt-6">
+<div class="max-w-2xl mx-auto mt-6 px-4 sm:px-0">
     <h1 class="text-2xl font-bold mt-4">Liens</h1>
 
     <div class="flex flex-col mt-4">
         <label for="search" class="font-semibold">Rechercher un cours</label>
         <input placeholder="Espagnol" type="search" id="search" name="search"
-               class="bg-gray-800 border-gray-700 focus:ring-purple-500 shadow-lg focus:border-purple-500  border transition duration-200 ease-in-out py-2 px-4 mt-2 block w-full border-gray-300 rounded-lg">
+               class="bg-gray-800 border-gray-700 focus:ring-purple-500 shadow-lg focus:border-purple-500  transition duration-200 ease-in-out bg-gray-800 border-t rounded-lg px-4 py-3 mt-2 block  rounded-lg">
     </div>
 
     <div class="loading bg-gray-800 w-full p-4 rounded-lg border border-gray-700 flex items-center justify-center mt-4">
