:lipstick: add some useless metatags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Liens CNED</title>
     <link rel="stylesheet" href="styles/app.css">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="CNED">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="author" content="Félix Dorn">
 </head>
 <body class="bg-gray-900 text-gray-200">
 <div class="max-w-2xl mx-auto mt-6 px-4 sm:px-0">
@@ -15,7 +21,7 @@
     <div class="flex flex-col mt-4">
         <label for="search" class="font-semibold">Rechercher un cours</label>
         <input placeholder="Espagnol" type="search" id="search" name="search"
-               class="bg-gray-800 border-gray-700 focus:ring-purple-500 shadow-lg focus:border-purple-500  transition duration-200 ease-in-out bg-gray-800 border-t rounded-lg px-4 py-3 mt-2 block  rounded-lg">
+               class="bg-gray-800 border-gray-700 focus:ring-purple-500 shadow-lg  focus:ring-2 focus:ring-offset-2 focus:ring-purple-500 focus:ring-offset-gray-800 focus:outline-none transition duration-200 ease-in-out bg-gray-800 border-t rounded-lg px-4 py-3 mt-2 block  rounded-lg">
     </div>
 
     <div class="loading bg-gray-800 w-full p-4 rounded-lg border border-gray-700 flex items-center justify-center mt-4">
