:lipstick: ui niceties

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </ul>
 
 </div>
-<a href="//github.com/felixdorn/cned.felixdorn.fr" class="block mt-8">
-    <footer class="bg-gray-800 border-t border-gray-700 flex items-center justify-center py-4 max-w-2xl mx-auto rounded-lg">
+<a href="//github.com/felixdorn/cned.felixdorn.fr" class="block mt-6">
+    <footer class="bg-gray-800 border-t border-gray-700 flex items-center justify-center py-4 max-w-2xl mx-auto sm:rounded-lg">
         <svg xmlns="http://www.w3.org/2000/svg" class="" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
              stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
